[gd_scene load_steps=4 format=3 uid="uid://dy5w4vsc8fgkj"]

[ext_resource type="Script" path="res://Scripts/ShopScreen.gd" id="1_evvum"]
[ext_resource type="Theme" uid="uid://boae5h5x4m1gb" path="res://Themes/buttons.tres" id="2_kmill"]
[ext_resource type="Theme" uid="uid://qsc4i4scr2gk" path="res://Themes/item.tres" id="3_mkjmw"]

[node name="ShopScreen" type="CanvasLayer"]
script = ExtResource("1_evvum")

[node name="BackS" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 210.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kmill")
text = "Back"

[node name="Buy" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -100.0
offset_right = -10.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_kmill")
text = "Buy"

[node name="Description" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -240.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Description"
horizontal_alignment = 1

[node name="ScrollC" type="ScrollContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 480.0
grow_horizontal = 2

[node name="GridC" type="GridContainer" parent="ScrollC"]
layout_mode = 2
columns = 2

[node name="Healing" type="Button" parent="ScrollC/GridC"]
layout_mode = 2
theme = ExtResource("3_mkjmw")
text = "Healing Potion"

[node name="Mana" type="Button" parent="ScrollC/GridC"]
layout_mode = 2
theme = ExtResource("3_mkjmw")
text = "Mana Potion"

[node name="Cleansing" type="Button" parent="ScrollC/GridC"]
layout_mode = 2
theme = ExtResource("3_mkjmw")
text = "Cleansing Potion"

[connection signal="pressed" from="BackS" to="." method="_on_back_s_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="ScrollC/GridC/Healing" to="." method="_on_healing_pressed"]
[connection signal="pressed" from="ScrollC/GridC/Mana" to="." method="_on_mana_pressed"]
[connection signal="pressed" from="ScrollC/GridC/Cleansing" to="." method="_on_cleansing_pressed"]
